bug fixed on a:hover color (links became invisible)
git-svn-id: http://piwigo.org/svn/extensions/simple_themes/simple-white@10949 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -2,6 +2,10 @@ body {
   background-color: #f0f0f0;
   color: #999999;
 }
+
+a:hover, #menuswitcher:hover, #theComments h3:hover {
+  color: #707070;
+}
  
 #content {
   background-color: #ffffff;
